--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
@@ -19,7 +20,9 @@
     "prisma": "^5.10.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.4.0",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
